# 2D-OpenGL-Game-Engine

./: CMakeLists.txt  CMakeLists.txt~  README.md
Engine/: CMakeLists.txt  CMakeLists.txt~  Camera2D.cpp  Camera2D.h  Camera2D.h~  Engine.cpp  Engine.h  Errors.cpp  Errors.cpp~  Errors.h  GLSLProgram.cpp  GLSLProgram.cpp~  GLSLProgram.h  GLSLProgram.h~  GLTexture.h  GLTexture.h~  IOManager.cpp  IOManager.cpp~  IOManager.h  IOManager.h~  ImageLoader.cpp  ImageLoader.h  ImageLoader.h~  InputManager.cpp  InputManager.cpp~  InputManager.h  InputManager.h~  MainGame.cpp~  MainGame.h~  Makefile  ResourceManager.cpp  ResourceManager.cpp~  ResourceManager.h  ResourceManager.h~  Sprite.cpp  Sprite.cpp~  Sprite.h  Sprite.h~  SpriteBatch.cpp  SpriteBatch.cpp~  (+19 more)
res/: colorShading.fs~  colorShading.vs  colorShading.vs~
src/: Agent.h  Enemy.h  Friendly.h  Level.cpp  Level.h  MainGame.cpp  MainGame.cpp~  MainGame.h  MainGame.h~  Player.h  Projectile.cpp  Projectile.h  main.cpp  main.cpp~
